tests/cases/compiler-development/artifact/ok/token-dump-basic.ari
fn main() -> i64 {
  let value = 42i64;
  return value;
}
