tests/cases/compiler-development/artifact/errors/syntax-recovery-attribute-token-tree.ari
@cfg(feature
fn after() -> i64 {
  return 6;
}
